# snowmanServer

./: Dockerfile  docker-compose.yaml  pyproject.toml
api/: db.py  main.py  migrate_db.py  schemas.py
api/models/: photo.py
api/routers/: crud.py
web/: index.html
